<resources>
    <string name="app_name">App4</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Signin">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="SignUp">Sign Up</string>
    <string name="Age">Age</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="lastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="Users">Users</string>
    <string name="MyProfile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_as">Sign-in as</string>
    <string name="Signing_in">Signing_in...</string>
    <string name="Signing_up">Siging Up...</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="editInfo">Edit Information</string>
</resources>