<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_file"
    app:startDestination="@+id/nav_users">

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.app4.UsersFrag"
        android:label="@string/Users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.app4.MyProfile_frag"
        android:label="@string/MyProfile"
        tools:layout="@layout/fragment_my_profile_frag" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.app4.LogoutFrag"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />

</navigation>